# Hodor

./: README.md  musl_node.md  svf.modified
HODOR/: README.md  hodor.py
HODOR/build_cg/: build_ast.py
HODOR/generate_whitelist/: generate_whitelist.py  package.json  sec.js  threadpool_whitelist
HODOR/node_musl_sec/: configure.py  run_main.js  threadpool.c
dataset/@diez-generation/: @diez-generation.poc.js  glibc_time  package.json  poc.js
dataset/@strikeentco-set/: package.json  poc.js
dataset/@zhaoyao91-eval-in-vm/: package.json  zhaoyaoeval 2  zhaoyaoeval-poc.js
dataset/aaptjs/: aaptjs.poc.js  bash.sh  package.json  test1.js
dataset/access-policy/: access-policy.poc.js  package.json  poc.js  test1.js  test2.js  test3.js
dataset/accesslog/: accesslog.poc 2.js  accesslog.poc.js  package.json  test1.js
dataset/adb-driver/: adb-driver.poc.js  bash.sh  package.json  test1.js
dataset/adm-zip/: adm-zip.poc.js  package.json  whitelist
dataset/alfred-workflow-nodejs/: alfred-workflow-nodejs.poc.js  package.json  test1.js
dataset/angular-expressions/: angular-expressions.poc.js  package.json  test1.js  test2.js  test3.js
dataset/apex-publish-static-files/: apex-publish-static-files.poc.js  package.json  test1.js
dataset/apiconnect-cli-plugins/: apiconnect-cli-plugins.poc.js  bash.sh  test1.js  (+3 more)
llvm_pass/: CMakeLists.txt  build.sh
llvm_pass/include/node/: NewNodePass.h  NodePass.h
llvm_pass/include/utils/: Options.h  utils.h
llvm_pass/lib/: CMakeLists.txt
llvm_pass/lib/node/: NewNodePass.cpp  NodePass.cpp
llvm_pass/lib/utils/: Options.cpp  utils.cpp
llvm_pass/tool/: CMakeLists.txt  node_analysis.cpp
node_callgraph_evaluation/: callgraph_glibc_origin.py  callgraph_musl_final.py  callgraph_musl_origin.py  glibc_syscall.py  musl.py  stats.py
svf/: CMakeLists.txt  build.sh
svf/tools/CallGraph/: CMakeLists.txt  svf_callgraph.cpp
(+1022 files in other folders)
